<?xml version="1.0" encoding="utf-8"?>
<resources>

        <!--
     !========================================================================================
     !  NOTE:
     !    1.  All strings with names matching "^temp_" can be removed for release.
     !        They're here to visualize screens in the AndroidStudio designer.
     !        You'd have to remove all "android:text="temp_*" values from the layout XML
     !        files as well.
     !========================================================================================
     !-->
        
    <!--
     !============================================
     !     Application Globals
     !============================================
     !-->
    <string name="app_name">Workflow Example</string>


    <!--
     !============================================
     !     WorkflowActivity
     !============================================
     !-->
    <string name="title_activity_workflowExample">Workflow Example</string>    
    <string name="fieldAddUnitCommentHint">New unit comment</string>   
    <string name="temp_dynMultiSelectTitle">Unit Evaluation</string>   
    <string name="tabExceptionWorkflow">UNIT EVALUATION</string>   
    <string name="tabExceptionComments">UNIT COMMENTS</string>   
    <string name="progressFetchUnitCommentsTitle">Please wait</string> 
    <string name="progressFetchUnitCommentsMessage">Fetching unit comments &#8230;</string>    
    <string name="progressAddUnitCommentTitle">Please wait</string>    
    <string name="progressAddUnitCommentMessage">Adding unit comment &#8230;</string>  
    <string name="unitCommentsPrefix">Comments:</string>
    <string name="unitComments">Add Comment</string>
    <string name="unitCommentsListTitle">Comment History</string>  
    <string name="progressFetchWorkflowTitle">Please wait</string>  
    <string name="progressFetchWorkflowMessage">Fetching workflow &#8230;</string>  
    <string name="progressSaveWorkflowTitle">Please wait</string>  
    <string name="progressSaveWorkflowMessage">Saving workflow &#8230;</string>  
    <string name="temp_dynTextTitle">License Plate:</string>  
    <string name="temp_dynTextFieldHint">Plate Number</string>  
    <string name="initialWorkflowsTitle">Unit Evaluation</string>  
    <string name="buttonMedicalHistory">Medical History</string>  
    <string name="buttonPersonalInfo">Personal Info</string>  
    <string name="buttonComplete">Complete</string>  
    <string name="errorGetWorkflowFailed">Could not fetch workflow</string>  
    <string name="errorPutWorkflowResponseFailed">Could not save workflow results</string>  
    <string name="successPutWorkflowSaved">Workflow successfully saved</string>
    <!--
     !============================================
     !     Dialogs
     !============================================
     !-->
    <string name="errorDialogOKButton">OK</string>
    <string name="errorDialogTitle">Error</string>

    <!--
     !============================================
     !     SettingsActivity
     !============================================
     !-->
    <string name="title_activity_settings">Settings</string>
    <string name="apiSettingsTitle">API Settings</string>
    <string name="apiURLPrefix">API URL:</string>
    <string name="apiURLHttpsValuePrefix">HTTPS?</string>
    <string name="temp_apiURLValue">http://10.5.1.104:8080</string>
    <string name="apiNewHostPrefix">New Host:</string>
    <string name="apiNewHostHint">hostname</string>
    <string name="apiNewHostDescriptionHint">Description</string>
    <string name="apiNewHostAdd">ADD</string>
    <string-array name="api_urls"> <!-- ZEROTH ELEMENT IS USED IN THIS APP !-->
        <item>://192.168.1.66:8080</item> <!--    THalliley laptop via Halliley   !-->
        <item>://10.5.2.28:8080</item>       <!-- THalliley laptop via RIIS Main  !-->
        <item>://10.6.1.157:8080</item>      <!-- THalliley laptop via RIIS Guest !-->
    </string-array>
    
    <string-array name="api_urls_spinner">
        <item>THalliley laptop via Halliley (home)</item>
        <item>THalliley laptop via RIIS Main</item>
        <item>THalliley laptop via RIIS Guest</item>
    </string-array>

    <string name="progressSettingsTitle">Please wait</string>
    <string name="progressSettingsMsg">I\'m not a genie, you know ...</string>

</resources>
