<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  tools:context="com.riis.WorkflowExample.activity.SettingsActivity"
			  style="@style/settingsPage"
			  android:orientation="vertical"
			  >

	<LinearLayout android:id="@+id/apiElements"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="9dip"
				  android:layout_marginLeft="9dip"
				  android:layout_marginRight="9dip"
				  android:orientation="horizontal"
				  >

		<TextView android:id="@+id/apiSettingsTitle"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:singleLine="true"
				  android:text="@string/apiSettingsTitle"
				  style="@style/sectionHeader"
				  />
		
	</LinearLayout>
	
	<include layout="@layout/separator"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 />

	<LinearLayout android:id="@+id/apiElements1"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="9dip"
				  android:layout_marginLeft="9dip"
				  android:layout_marginRight="9dip"
				  android:orientation="horizontal"
				  >

		<CheckBox android:id="@+id/apiURLHttpsValue"
				  style="@style/checkbox"
				  android:layout_height="wrap_content"
				  android:layout_width="wrap_content"
				  android:layout_gravity="start"
				  android:text="@string/apiURLHttpsValuePrefix"
				  />
		
		<TextView android:id="@+id/apiURLPrefix"
				  style="@style/textView"
				  android:layout_height="wrap_content"
				  android:layout_width="wrap_content"
				  android:layout_marginLeft="9dip"
				  android:text="@string/apiURLPrefix"
				  />
		
		<Spinner android:id="@+id/apiURL"
				style="@style/spinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="3dip"
				/>

	</LinearLayout>

	<LinearLayout android:id="@+id/apiElements3"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="9dip"
				  android:layout_marginLeft="9dip"
				  android:layout_marginRight="9dip"
				  android:orientation="horizontal"
				  >

		<CheckBox android:id="@+id/apiNewHostHttpsValue"
				  style="@style/checkbox"
				  android:layout_height="wrap_content"
				  android:layout_width="wrap_content"
				  android:layout_gravity="start"
				  android:text="@string/apiURLHttpsValuePrefix"
				  />
		
		<EditText android:id="@+id/apiNewHostValue"
				  style="@style/editTextNormal"
				  android:layout_height="wrap_content"
				  android:layout_width="150dip"
				  android:layout_weight="2"
				  android:layout_marginLeft="1dip"
				  android:hint="@string/apiNewHostHint"
				  android:imeOptions="actionNext"
				  />

		<Button android:id="@+id/buttonAddNewHost"
				style="@style/actionButton"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:paddingLeft="9dip"
				android:paddingRight="9dip"
				android:text="@string/apiNewHostAdd"
				/>

	</LinearLayout>

	<LinearLayout android:id="@+id/apiElements2"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="9dip"
				  android:layout_marginLeft="9dip"
				  android:layout_marginRight="9dip"
				  android:orientation="horizontal"
				  >

		<TextView android:id="@+id/apiURLValuePrefix"
				  style="@style/textView"
				  android:layout_height="wrap_content"
				  android:layout_width="wrap_content"
				  android:text="App will use this base URL: "
				  android:textStyle="italic"
				  />

		<TextView android:id="@+id/apiURLValue"
				  style="@style/textView"
				  android:layout_height="wrap_content"
				  android:layout_width="wrap_content"
				  android:layout_marginLeft="3dip"
				  android:text="@string/temp_apiURLValue"
				  android:textStyle="bold"
				  />
		
	</LinearLayout>


</LinearLayout>
