<LinearLayout android:id="@+id/workflowExamplePage"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context="com.riis.WorkflowExample.activity.WorkflowExampleActivity"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
			  android:orientation="vertical"
			  style="@style/workflowPage"
              android:title="@string/title_activity_workflowExample"
              >
    
	
	<TextView android:id="@+id/workflowTitle"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:singleLine="true"
			  android:text="@string/app_name"
			  style="@style/sectionHeader"
			  />
		
	<include layout="@layout/separator"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 />

	<LinearLayout android:id="@+id/choices"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal"
				  >

		<Button android:id="@+id/buttonMedicalHistory"
				style="@style/actionButton"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_marginTop="6dip"
				android:layout_marginBottom="6dip"
				android:layout_marginLeft="9dip"
				android:paddingLeft="9dip"
				android:paddingRight="9dip"
				android:text="@string/buttonMedicalHistory"
				/>

		<Space android:id="@+id/spaceTheFinalFrontier"
			   android:layout_width="0dp"
			   android:layout_height="0dp"
			   android:layout_weight="1"
			   />

		<Button android:id="@+id/buttonPersonalInfo"
				style="@style/actionButton"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:layout_marginTop="6dip"
				android:layout_marginBottom="6dip"
				android:layout_marginRight="9dip"
				android:paddingLeft="9dip"
				android:paddingRight="9dip"
				android:text="@string/buttonPersonalInfo"
				/>

	</LinearLayout>

    <ScrollView android:id="@+id/scroller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

        <LinearLayout android:id="@+id/scrollable"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      >
            <LinearLayout android:id="@+id/inner"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          >
                
                <!-- All dynamic content goes here !-->
                
            </LinearLayout>

            <LinearLayout android:id="@+id/buttonContainer"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="9dip"
                          android:layout_marginRight="9dip"
                          android:orientation="horizontal"
                          >
                
                <Button android:id="@+id/buttonComplete"
                        style="@style/actionButton"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="6dip"
                        android:layout_marginBottom="6dip"
                        android:paddingLeft="9dip"
                        android:paddingRight="9dip"
                        android:text="@string/buttonComplete"
                        />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    
</LinearLayout>
