<LinearLayout android:id="@+id/dynText"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dip"
            android:layout_marginRight="9dip"
            android:orientation="vertical"
            >

    <TextView android:id="@+id/dynTextSectionTitle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:text="@string/temp_dynMultiSelectTitle"
              style="@style/sectionHeader"
              />

    <include layout="@layout/separator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />

    <LinearLayout android:id="@+id/dynTextValue"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="9dip"
                  android:layout_marginRight="9dip"
                  android:orientation="horizontal"
                  >

        <TextView android:id="@+id/dynTextTitle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/dynTextTitle"
                  android:text="@string/temp_dynTextTitle"
                  />
        
        <EditText android:id="@+id/dynTextField"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  style="@style/dynTextField"
                  android:hint="@string/temp_dynTextFieldHint"
                  android:singleLine="true"
                  />
        
    </LinearLayout>

    <LinearLayout android:id="@+id/inner"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="18dip"
                  android:layout_marginRight="9dip"
                  android:orientation="vertical"
                  >
    </LinearLayout>
    
</LinearLayout>
